--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <header>
     <title>Hashim Awan's Resume </title>
-<link rel= "stylesheet" href="css/hashim.css">
+<link rel= "stylesheet" href="CSS/hashim.css">
 <link rel="FaviconIcon" href="Favicon.ico"type="image/x-icon">
 <link rel="shortcut" href="Favicon.ico" type="image/x-icon">
 <meta name="viewpoint" content="width-device-width, initial-scale=1, shrink-to-fit=no">
