--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <header>
   <title>Hashim Awan portal</title>
   <link rel= "stylesheet" href="CSS/hashim.css">
-<link rel="FaviconIcon" href="Favicon.ico"type="image/x-icon">
+<link rel="FaviconIcon" href="favicon.ico"type="image/x-icon">
 <link rel="shortcut" href="Favicon.ico" type="image/x-icon">
 <meta name="viewpoint" content="width-device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="Hashim portal" content="Hashim awan portal">
