--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </header>
 <body>
-  <img src="images/me.jpg" height="350"alt="no image">
+  <img src="images/hashim.jpg" height="350"alt="no image">
 <h1>Hashim Awan</h1>
 <h3>About Me</h3>
 
