--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 </header>
 <body>
-  <img src="images/hashim.jpg" height="350"alt=" image">
-   <img src="images/banner.jpg" height="350"alt=" image">
-   <img src="images/headshot.jpg" height="350"alt=" image">
+  <img src="images/hashim.JPG" height="350"alt=" image">
+   
 <h1>Hashim Awan</h1>
 <h3>About Me</h3>
 
