--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
   <body>
 
-<img src="images/hashim.jpg" height="300"alt="no image">
+<img src="images/hashim.JPG" height="300"alt="no image">
     <hr>
     <!-- <img src="images" alt="No image" width="20%"> -->
 
