--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </header>
 <body>
-  <img src="images/hashim.JPG" height="350"alt=" image">
+  <img src="images/has.JPG" height="350"alt=" image">
    
 <h1>Hashim Awan</h1>
 <h3>About Me</h3>
