--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,7 @@
   </body>
   <footer>
   <hr>
-  <code>
-  Copyright (c) Hashim Awan 2022
-  </code>
+    
+    <P><a href="index.html">Back to my portal</a></p>
   </footer>
 </html>
